# yara-ttd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
libyarattd/: CMakeLists.txt
libyarattd/include/: libyarattd_common.h  libyarattd_crypto.h  libyarattd_memory.h  libyarattd_pe.h  libyarattd_scanner.h  libyarattd_scheduler.h  libyarattd_ttd.h  libyarattd_ttd_types.h  libyarattd_types.h  libyarattd_unicode.h  libyarattd_utils.h  libyarattd_vect.h  libyarattd_virtual_alloc.h
libyarattd/src/: libyarattd_common.c  libyarattd_pe.c  libyarattd_scanner.c  libyarattd_scheduler.c  libyarattd_ttd.c  libyarattd_utils.c  libyarattd_vect.c  libyarattd_virtual_alloc.c
tests/: CMakeLists.txt  calc_rules.yar  test_shellcode.c  test_upx.c
yara/: CMakeLists.txt
yara-ttd/: CMakeLists.txt
yara-ttd/include/: args.h
yara-ttd/src/: args.c  yara-ttd.c
